Fri Oct  4 00:57:53 2002  Manish Singh  <yosh@gimp.org>

	* gtkhscrollbar.[ch] gtkhseparator.[ch] gtkrange.[ch]
	gtkscrollbar.[ch] gtkseparator.[ch] gtkseparatormenuitem.h
	gtkvscrollbar.[ch] gtkvseparator.[ch]: Deprecation cleanup

Thu Oct  3 22:38:12 2002  Manish Singh  <yosh@gimp.org>

	* gdk-pixbuf/queryloaders.c: make it legal C

Thu Oct  3 16:40:18 2002 Eric Warmenhoven <eric@warmenhoven.org>

	* gdk/gdkevents.c, gdk/linux-fb/gdkwindow-fb.c,
	gtk/gtkwindow-decorate.c: implement maximize for linux-fb

	* gdk/linux-fb/gdkkeyboard-fb.c: implement raw keyboard mode

	* gdk/linux-fb/Makefile.am, gdk/linux-fb/gdkdnd-fb.c,
	gdk/linux-fb/gdkmain-fb.c, gdk/linux-fb/gdkselection-fb.c,
	gdk/linux-fb/miarc.c, gdk/linux-fb/mifpolycon.c,
	gdk/linux-fb/miwideline.c, gdk/linux-fb/mizerclip.c,
	gdk/linux-fb/mizerline.c: small cleanups

Thu Oct  3 19:00:55 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkselection-x11.c (gdk_selection_property_get): 
	Fix error in computing length and a memory leak.
	(Fixes #94072, reported by Hema Seetharamaiah)

	* gtk/gtkmenu.c (gtk_menu_motion_notify): Fix &event
	used instead of event.

2002-10-04  Matthias Clasen  <maclas@gmx.de>

	* demos/gtk-demo/main.c (main): 
	* demos/pixbuf-init.c (pixbuf_init): Adjust to gdk-pixbuf changes.

Thu Oct  3 23:53:43 2002  Kristian Rietveld  <kris@gtk.org>

	* gdk/x11/gdkwindow-x11.c (_gdk_windowing_window_destroy): get
	XDisplay from window instead of display, as display has not been
	defined here (fixes the build).

Thu Oct  3 17:09:23 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/{gdkdrawable-x11.[ch],gdkpixmap-x11.c,
	gdkwindow-x11.c}: Restore the pre-Xft2 code to
	render text directly via RENDER, conditionalized
	with !HAVE_XFT2 so that we'll build again on Xft1 
	systems. (#90181)

Thu Oct  3 14:13:33 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkevents.c (gdk_event_new): Add a 'type'
	parameter, make public.

	* gdk/gdkevents.c (gdk_event_copy): Copy the screen.
