@@ -102,6 +102,8 @@ GdkScreen * _gdk_x11_screen_new      (GdkDisplay *display,
 				      gint	  screen_number);
 
 void _gdk_x11_screen_window_manager_changed (GdkScreen *screen);
+void _gdk_x11_screen_size_changed           (GdkScreen *screen,
+					     XEvent    *event);
 
 G_END_DECLS
 
